Switch to Bazel for building.